--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -8,6 +8,7 @@
     <title>Ohmyfood</title>
 
     <!-- Style sheets -->
+    <link rel="stylesheet" href="css/main.css" type="text/css">
     <link rel="stylesheet" href="css/smart-phone.css" type="text/css">
 
     <!-- Libs -->
