--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -32,9 +32,12 @@
 
                     <input type="search" name="search-box" id="search" placeholder="Paris, Belleville" />
             </article>
-
-
         </nav>
+        <article>
+            <h2>Book the menu you like</h2>
+            <p>Discover top-of-the-art restaurants we picked for you</p>
+            <button>Explore our restaurants</button>
+        </article>
     </header>
     <main>
 
