--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -40,10 +40,84 @@
         </article>
     </header>
     <main>
-
+        <article>
+            <h3>How it works</h3>
+            <div class="btn-wrap">
+                <i class="fas fa-mobile-alt"></i>
+                <span>Chose a restaurant</span>
+            </div>
+            <div class="btn-wrap">
+                <i class="fas fa-list"></i>
+                <span>Create your menu</span>
+            </div>
+            <div class="btn-wrap">
+                <i class="fas fa-store"></i>
+                <span>Go enjoy it at the restaurant</span>
+            </div>
+        </article>
+        <article>
+            <h4>Restaurants</h4>
+            <a href="#" class="rst-ad">
+                <picture>
+                    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant picture">
+                </picture>
+                <div class="ad-info">
+                    <h5>The Full Palette</h5>
+                    <p>New York</p>
+                    <i class="fas fa-heart"></i>
+                </div>
+            </a>
+            <a href="#" class="rst-ad">
+                <picture>
+                    <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant picture">
+                </picture>
+                <div class="ad-info">
+                    <h5>The Enchanted Plate</h5>
+                    <p>New York</p>
+                    <i class="fas fa-heart"></i>
+                </div>
+            </a>
+            <a href="#" class="rst-ad">
+                <picture>
+                    <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant picture">
+                </picture>
+                <div class="ad-info">
+                    <h5>Bastille</h5>
+                    <p>New York</p>
+                    <i class="fas fa-heart"></i>
+                </div>
+            </a>
+            <a href="#" class="rst-ad">
+                <picture>
+                    <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                        alt="restaurant picture">
+                </picture>
+                <div class="ad-info">
+                    <h5>Le Gourmand</h5>
+                    <p>New York</p>
+                    <i class="fas fa-heart"></i>
+                </div>
+            </a>
+        </article>
     </main>
     <footer>
-
+        <h1>Ohmyfood</h1>
+        <div class="contacts">
+            <a href="#">
+                <i class="fas fa-utensils"></i>
+                <p>Suggest a restaurant</p>
+            </a>
+            <a href="#">
+                <i class="fas fa-handshake"></i>
+                <p>Become a partner</p>
+            </a>
+            <a href="#">
+                <p>Legal</p>
+            </a>
+            <a href="#">
+                <p>Contact</p>
+            </a>
+        </div>
     </footer>
 
 
