keep building html and sass

--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -25,24 +25,26 @@
 <body>
     <header>
         <nav>
-            <article>
+            <article class="navigation">
                 <h1>Ohmyfood</h1>
                 <div class="search-btn-wrap">
                     <i class="fas fa-map-marker-alt"></i>
-
                     <input type="search" name="search-box" id="search" placeholder="Paris, Belleville" />
             </article>
         </nav>
-        <article>
+        <article class="head">
             <h2>Book the menu you like</h2>
             <p>Discover top-of-the-art restaurants we picked for you</p>
             <button>Explore our restaurants</button>
         </article>
     </header>
     <main>
-        <article>
+        <!-- Section with the buttons for chosing 
+            the place and prepare the menu -->
+        <article class="btns">
             <h3>How it works</h3>
             <div class="btn-wrap">
+                <span>1</span>
                 <i class="fas fa-mobile-alt"></i>
                 <span>Chose a restaurant</span>
             </div>
@@ -55,12 +57,11 @@
                 <span>Go enjoy it at the restaurant</span>
             </div>
         </article>
-        <article>
+        <!-- Section of the restaurants -->
+        <article class="rsts-section">
             <h4>Restaurants</h4>
-            <a href="#" class="rst-ad">
-                <picture>
-                    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant picture">
-                </picture>
+            <a target="_self" href="the_full_palette.html" class="rst-ad">
+                <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant picture">
                 <div class="ad-info">
                     <h5>The Full Palette</h5>
                     <p>New York</p>
