--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -46,15 +46,17 @@
             <div class="btn-wrap">
                 <span>1</span>
                 <i class="fas fa-mobile-alt"></i>
-                <span>Chose a restaurant</span>
+                <p>Chose a restaurant</p>
             </div>
             <div class="btn-wrap">
+                <span>2</span>
                 <i class="fas fa-list"></i>
-                <span>Create your menu</span>
+                <p>Create your menu</p>
             </div>
             <div class="btn-wrap">
+                <span>3</span>
                 <i class="fas fa-store"></i>
-                <span>Go enjoy it at the restaurant</span>
+                <p>Go enjoy it at the restaurant</p>
             </div>
         </article>
         <!-- Section of the restaurants -->
