--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -23,7 +23,9 @@
 </head>
 
 <body>
+    <!-- HEADER  -->
     <header>
+        <!-- Section Navigation -->
         <nav>
             <article class="navigation">
                 <h1>Ohmyfood</h1>
@@ -32,12 +34,15 @@
                     <input type="search" name="search-box" id="search" placeholder="Paris, Belleville" />
             </article>
         </nav>
+        <!-- End of Navigation -->
         <article class="head">
             <h2>Book the menu you like</h2>
             <p>Discover top-of-the-art restaurants we picked for you</p>
             <button>Explore our restaurants</button>
         </article>
     </header>
+
+    <!-- MAIN SECTION -->
     <main>
         <!-- Section with the buttons for chosing 
             the place and prepare the menu -->
@@ -62,45 +67,51 @@
         <!-- Section of the restaurants -->
         <article class="rsts-section">
             <h4>Restaurants</h4>
-            <a target="_self" href="the_full_palette.html" class="rst-ad">
-                <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant picture">
+            <div class="rst-ad">
+                <a target="_self" href="the_full_palette.html">
+                    <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant picture">
+                </a>
+                <span>New</span>
                 <div class="ad-info">
                     <h5>The Full Palette</h5>
                     <p>New York</p>
                     <i class="fas fa-heart"></i>
                 </div>
-            </a>
-            <a href="#" class="rst-ad">
-                <picture>
+            </div>
+            <div class="rst-ad">
+                <a target="_self" href="the_enchanted_plate.html">
                     <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant picture">
-                </picture>
+                </a>
+                <span>New</span>
                 <div class="ad-info">
                     <h5>The Enchanted Plate</h5>
                     <p>New York</p>
                     <i class="fas fa-heart"></i>
                 </div>
-            </a>
-            <a href="#" class="rst-ad">
-                <picture>
+            </div>
+            <div class="rst-ad">
+                <a target="_self" href="bastille.html">
                     <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant picture">
-                </picture>
+                </a>
+                <span>New</span>
                 <div class="ad-info">
                     <h5>Bastille</h5>
                     <p>New York</p>
                     <i class="fas fa-heart"></i>
                 </div>
-            </a>
-            <a href="#" class="rst-ad">
-                <picture>
+            </div>
+            <div class="rst-ad">
+                <a target="_self" href="le_gourmand.html">
                     <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                         alt="restaurant picture">
-                </picture>
+                </a>
+                <span>New</span>
                 <div class="ad-info">
                     <h5>Le Gourmand</h5>
                     <p>New York</p>
                     <i class="fas fa-heart"></i>
                 </div>
-            </a>
+            </div>
         </article>
     </main>
     <footer>
