--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -114,7 +114,7 @@
             </div>
         </article>
     </main>
-    <footer>
+    <footer class="footer">
         <h1>Ohmyfood</h1>
         <div class="contacts">
             <a href="#">
