--- a/le_gourmand.html
+++ b/le_gourmand.html
@@ -28,7 +28,7 @@
         <!-- Section Navigation -->
         <nav>
             <article class="navigation">
-                <h1>Ohmyfood</h1>
+                <img src="/images/logo/ohmyfood.png" alt="logo-picture">
             </article>
         </nav>
 
