--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -28,7 +28,8 @@
         <!-- Section Navigation -->
         <nav>
             <article class="navigation">
-                <h1>Ohmyfood</h1>
+                <img src="/images/logo/ohmyfood.png" alt="logo picture">
+                <!-- <h1>Ohmyfood</h1> -->
                 <div class="search-btn-wrap">
                     <i class="fas fa-map-marker-alt"></i>
                     <input type="search" name="search-box" id="search" placeholder="Paris, Belleville" />
@@ -73,9 +74,11 @@
                 </a>
                 <span>New</span>
                 <div class="ad-info">
-                    <h5>The Full Palette</h5>
-                    <p>New York</p>
-                    <i class="fas fa-heart"></i>
+                    <div class="info">
+                        <h5>The Full Palette</h5>
+                        <p>New York</p>
+                    </div>
+                    <i class="far fa-heart"></i>
                 </div>
             </div>
             <div class="rst-ad">
@@ -84,20 +87,23 @@
                 </a>
                 <span>New</span>
                 <div class="ad-info">
-                    <h5>The Enchanted Plate</h5>
-                    <p>New York</p>
-                    <i class="fas fa-heart"></i>
+                    <div class="info">
+                        <h5>The Enchanted Plate</h5>
+                        <p>New York</p>
+                    </div>
+                    <i class="far fa-heart"></i>
                 </div>
             </div>
             <div class="rst-ad">
                 <a target="_self" href="bastille.html">
                     <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant picture">
                 </a>
-                <span>New</span>
                 <div class="ad-info">
-                    <h5>Bastille</h5>
-                    <p>New York</p>
-                    <i class="fas fa-heart"></i>
+                    <div class="info">
+                        <h5>Bastille</h5>
+                        <p>New York</p>
+                    </div>
+                    <i class="far fa-heart"></i>
                 </div>
             </div>
             <div class="rst-ad">
@@ -107,15 +113,17 @@
                 </a>
                 <span>New</span>
                 <div class="ad-info">
-                    <h5>Le Gourmand</h5>
-                    <p>New York</p>
-                    <i class="fas fa-heart"></i>
+                    <div class="info">
+                        <h5>Le Gourmand</h5>
+                        <p>New York</p>
+                    </div>
+                    <i class="far fa-heart"></i>
                 </div>
             </div>
         </article>
     </main>
-    <footer class="footer">
-        <h1>Ohmyfood</h1>
+    <footer>
+        <h1>ohmyfood</h1>
         <div class="contacts">
             <a href="#">
                 <i class="fas fa-utensils"></i>
