--- a/the_full_palette.html
+++ b/the_full_palette.html
@@ -24,7 +24,9 @@
 <body>
     <header>
         <nav>
-            <h1>ohmayfood</h1>
+            <article class="navigation">
+                <img src="/images/logo/ohmyfood.png" alt="logo picture">
+            </article>
         </nav>
         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant picture">
     </header>
@@ -50,8 +52,25 @@
         </div>
     </main>
     <footer>
-
+        <h1>ohmyfood</h1>
+        <div class="contacts">
+            <a href="#">
+                <i class="fas fa-utensils"></i>
+                <p>Suggest a restaurant</p>
+            </a>
+            <a href="#">
+                <i class="fas fa-handshake"></i>
+                <p>Become a partner</p>
+            </a>
+            <a href="#">
+                <p>Legal</p>
+            </a>
+            <a href="#">
+                <p>Contact</p>
+            </a>
+        </div>
     </footer>
+
 </body>
 
 </html>
