--- a/bastille.html
+++ b/bastille.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ohmyfood</title>
+    <title>The Full Palette</title>
 
     <!-- Style sheets -->
     <link rel="stylesheet" href="css/main.css" type="text/css">
@@ -20,24 +20,88 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/ecb31e059d.js" crossorigin="anonymous"></script>
-</head>
 
 <body>
-    <!-- HEADER  -->
+    <!-- HEADER -->
     <header>
-        <!-- Section Navigation -->
+        <!-- Navigation -->
         <nav>
-            <article class="navigation">
+            <div class="rstnt-navigation">
+                <a href="ohmyfood.html">
+                    <i class="fas fa-arrow-left"></i>
+                </a>
                 <img src="/images/logo/ohmyfood.png" alt="logo picture">
-            </article>
+            </div>
         </nav>
-
+    </header>
     <!-- MAIN SECTION -->
     <main>
-        
+        <!--Bastille Menue section  -->
+        <article class="menu">
+            <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant picture">
+            <h1>Bastille</h1>
+            <i class="far fa-heart"></i>
+        </article>
+        <!-- Starters -->
+        <article class="starters-bastille">
+            <h2>ENTREES</h2>
+            <article class="strtr-bastille">
+                <h3>Citrus Squid Carpaccio</h3>
+                <p>With orange zest</p>
+                <span>25€</span>
+            </article>
+            <article class="strtr-bastille">
+                <h3>Grandmoters's Vegetable Soup</h3>
+                <p>Carrots,parsnips,Jerusalem artichoke</p>
+                <span>35€</span>
+            </article>
+            <article class="strtr-bastille">
+                <h3>Onion Soup</h3>
+                <p>Revisited</p>
+                <span>20€</span>
+            </article>
+            <!-- Main dish -->
+            <article class="main-bastille">
+                <h2>MAIN DISH</h2>
+                <article class="mn-bastille">
+                    <h3>Scallops</h3>
+                    <p>With mashed parsnip</p>
+                    <span>40€</span>
+                </article>
+                <article class="mn-bastille">
+                    <h3>Magret de canard</h3>
+                    <p>With mashed potatoes</p>
+                    <span>35€</span>
+                </article>
+                <article class="mn-bastille">
+                    <h3>Game Hen</h3>
+                    <p>With vegetable gnocchis</p>
+                    <span>44€</span>
+                </article>
+                <!-- Desserts -->
+                <article class="desserts-bastille">
+                    <h2>DESSERTS</h2>
+                    <article class="dssrt-bastille">
+                        <h3>Floral Ice Cream</h3>
+                        <p>With hazelnut butter</p>
+                        <span>18€</span>
+                    </article>
+                    <article class="dssrt-bastille">
+                        <h3>Chocolate Lava Cake</h3>
+                        <p>Revisited</p>
+                        <span>22€</span>
+                    </article>
+                    <article class="dssrt-bastille">
+                        <h3>Napolean</h3>
+                        <p>With blueberries and marzipan</p>
+                        <span>23€</span>
+                    </article>
+                </article>
+                <button class="order">Order</button>
     </main>
+    <!-- FOOTER -->
     <footer>
-        <h1>Ohmyfood</h1>
+        <h5>ohmyfood</h5>
         <div class="contacts">
             <a href="#">
                 <i class="fas fa-utensils"></i>
@@ -55,8 +119,6 @@
             </a>
         </div>
     </footer>
-
-
 </body>
 
 </html>
