--- a/ohmyfood.html
+++ b/ohmyfood.html
@@ -27,17 +27,16 @@
     <header>
         <!-- Section Navigation -->
         <nav>
-            <article class="navigation">
+            <div class="navigation">
                 <img src="/images/logo/ohmyfood.png" alt="logo picture">
-                <!-- <h1>Ohmyfood</h1> -->
                 <div class="search-btn-wrap">
                     <i class="fas fa-map-marker-alt"></i>
                     <input type="search" name="search-box" id="search" placeholder="Paris, Belleville" />
-            </article>
+                </div>
         </nav>
         <!-- End of Navigation -->
         <article class="head">
-            <h2>Book the menu you like</h2>
+            <h1>Book the menu you like</h1>
             <p>Discover top-of-the-art restaurants we picked for you</p>
             <button>Explore our restaurants</button>
         </article>
@@ -48,7 +47,7 @@
         <!-- Section with the buttons for chosing 
             the place and prepare the menu -->
         <article class="btns">
-            <h3>How it works</h3>
+            <h2>How it works</h2>
             <div class="btn-wrap">
                 <span>1</span>
                 <i class="fas fa-mobile-alt"></i>
@@ -67,17 +66,17 @@
         </article>
         <!-- Section of the restaurants -->
         <article class="rsts-section">
-            <h4>Restaurants</h4>
+            <h3>Restaurants</h3>
             <div class="rst-ad">
                 <a target="_self" href="the_full_palette.html">
                     <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant picture">
                 </a>
                 <span>New</span>
                 <div class="ad-info">
-                    <div class="info">
-                        <h5>The Full Palette</h5>
+                    <article class="info">
+                        <h4>The Full Palette</h4>
                         <p>New York</p>
-                    </div>
+                    </article>
                     <i class="far fa-heart"></i>
                 </div>
             </div>
@@ -87,10 +86,10 @@
                 </a>
                 <span>New</span>
                 <div class="ad-info">
-                    <div class="info">
-                        <h5>The Enchanted Plate</h5>
+                    <article class="info">
+                        <h4>The Enchanted Plate</h4>
                         <p>New York</p>
-                    </div>
+                    </article>
                     <i class="far fa-heart"></i>
                 </div>
             </div>
@@ -99,10 +98,10 @@
                     <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="restaurant picture">
                 </a>
                 <div class="ad-info">
-                    <div class="info">
-                        <h5>Bastille</h5>
+                    <article class="info">
+                        <h4>Bastille</h4>
                         <p>New York</p>
-                    </div>
+                    </article>
                     <i class="far fa-heart"></i>
                 </div>
             </div>
@@ -113,17 +112,17 @@
                 </a>
                 <span>New</span>
                 <div class="ad-info">
-                    <div class="info">
-                        <h5>Le Gourmand</h5>
+                    <article class="info">
+                        <h4>Le Gourmand</h4>
                         <p>New York</p>
-                    </div>
+                    </article>
                     <i class="far fa-heart"></i>
                 </div>
             </div>
         </article>
     </main>
     <footer>
-        <h1>ohmyfood</h1>
+        <h5>ohmyfood</h5>
         <div class="contacts">
             <a href="#">
                 <i class="fas fa-utensils"></i>
