--- a/the_full_palette.html
+++ b/the_full_palette.html
@@ -22,37 +22,86 @@
     <script src="https://kit.fontawesome.com/ecb31e059d.js" crossorigin="anonymous"></script>
 
 <body>
+    <!-- HEADER -->
     <header>
+        <!-- Navigation -->
         <nav>
-            <article class="navigation">
+            <div class="rstnt-navigation">
+                <a href="ohmyfood.html">
+                    <i class="fas fa-arrow-left"></i>
+                </a>
                 <img src="/images/logo/ohmyfood.png" alt="logo picture">
-            </article>
+            </div>
         </nav>
-        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant picture">
     </header>
+    <!-- MAIN SECTION -->
     <main>
-        <div class="menu">
-            <h2>
-                The Full Palette
-                <i class="fas fa-heart"></i>
-                <P>ENTREES</P>
-                <article>
-                    <h3>Escargot</h3>
-                    <p>With southern French spices 25€</p>
+        <!--The Full Palette Menue section  -->
+        <article class="menu">
+            <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="restaurant picture">
+            <h1>The Full Palette</h1>
+            <i class="far fa-heart"></i>
+        </article>
+        <!-- Starters -->
+        <article class="starters-palette">
+            <h2>ENTREES</h2>
+            <article class="strtr-palette">
+                <h3>Escargot</h3>
+                <p>With southern French spices</p>
+                <span>25€</span>
+            </article>
+            <article class="strtr-palette">
+                <h3>Duck Foie Gras</h3>
+                <p>With black truffle shavings</p>
+                <span>35€</span>
+            </article>
+            <article class="strtr-palette">
+                <h3>Fried egg</h3>
+                <p>Seasoned with truffle cream and... </p>
+                <span>20€</span>
+            </article>
+            <!-- Main dish -->
+            <article class="main-palette">
+                <h2>MAIN DISH</h2>
+                <article class="mn-palette">
+                    <h3>Herb-Encrusted Steak</h3>
+                    <p>With delicately sliced and seasoned veg...</p>
+                    <span>40€</span>
                 </article>
-                <article>
-                    <h3>Duck Foie Gras</h3>
-                    <p>With black truffle shavings 35€</p>
+                <article class="mn-palette">
+                    <h3>Ox Tail Shepard's Pie</h3>
+                    <p>With black truffle and pureed parsnips</p>
+                    <span>35€</span>
                 </article>
-                <article>
-                    <h3>Fried egg</h3>
-                    <p>Seasoned with truffle cream and 20€</p>
+                <article class="mn-palette">
+                    <h3>Filet of Sole</h3>
+                    <p>With citrus dressing</p>
+                    <span>44€</span>
                 </article>
-            </h2>
-        </div>
+                <!-- Desserts -->
+                <article class="desserts-palette">
+                    <h2>DESSERTS</h2>
+                    <article class="dssrt-palette">
+                        <h3>Paris-Brest</h3>
+                        <p>Revisited</p>
+                        <span>18€</span>
+                    </article>
+                    <article class="dssrt-palette">
+                        <h3>Chocolate Macaroons</h3>
+                        <p>With vanilla ice cream</p>
+                        <span>22€</span>
+                    </article>
+                    <article class="dssrt-palette">
+                        <h3>Chocolate Mousse</h3>
+                        <p>With cpices and black truffle</p>
+                        <span>23€</span>
+                    </article>
+                </article>
+                <button class="order">Order</button>
     </main>
+    <!-- FOOTER -->
     <footer>
-        <h1>ohmyfood</h1>
+        <h5>ohmyfood</h5>
         <div class="contacts">
             <a href="#">
                 <i class="fas fa-utensils"></i>
@@ -70,7 +119,6 @@
             </a>
         </div>
     </footer>
-
 </body>
 
 </html>
