--- a/le_gourmand.html
+++ b/le_gourmand.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ohmyfood</title>
+    <title>The Full Palette</title>
 
     <!-- Style sheets -->
     <link rel="stylesheet" href="css/main.css" type="text/css">
@@ -20,24 +20,88 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/ecb31e059d.js" crossorigin="anonymous"></script>
-</head>
 
 <body>
-    <!-- HEADER  -->
+    <!-- HEADER -->
     <header>
-        <!-- Section Navigation -->
+        <!-- Navigation -->
         <nav>
-            <article class="navigation">
-                <img src="/images/logo/ohmyfood.png" alt="logo-picture">
-            </article>
+            <div class="rstnt-navigation">
+                <a href="ohmyfood.html">
+                    <i class="fas fa-arrow-left"></i>
+                </a>
+                <img src="/images/logo/ohmyfood.png" alt="logo picture">
+            </div>
         </nav>
-
+    </header>
     <!-- MAIN SECTION -->
     <main>
-        
+        <!--Le Gourmand Menue section  -->
+        <article class="menu">
+            <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="restaurant picture">
+            <h1>Le Gourmand</h1>
+            <i class="far fa-heart"></i>
+        </article>
+        <!-- Starters -->
+        <article class="starters-gourmand">
+            <h2>ENTREES</h2>
+            <article class="strtr-gourmand">
+                <h3>Tuna Carpaccio</h3>
+                <p>Seasoned with yuzu</p>
+                <span>25€</span>
+            </article>
+            <article class="strtr-gourmand">
+                <h3>Crunchy Lobster Croquets</h3>
+                <p>With seasonal vegetables</p>
+                <span>35€</span>
+            </article>
+            <article class="strtr-gourmand">
+                <h3>Mushroom Soup</h3>
+                <p>With truffles</p>
+                <span>20€</span>
+            </article>
+            <!-- Main dish -->
+            <article class="main-gourmand">
+                <h2>MAIN DISH</h2>
+                <article class="mn-gourmand">
+                    <h3>Roast Chicken with Provincal Herbs</h3>
+                    <p>With truffle cream</p>
+                    <span>40€</span>
+                </article>
+                <article class="mn-gourmand">
+                    <h3>Roasted Lobster</h3>
+                    <p>With seasonel vegetables</p>
+                    <span>35€</span>
+                </article>
+                <article class="mn-gourmand">
+                    <h3>Angust Beef Ribs</h3>
+                    <p>With mashed parshnips</p>
+                    <span>44€</span>
+                </article>
+                <!-- Desserts -->
+                <article class="desserts-gourmand">
+                    <h2>DESSERTS</h2>
+                    <article class="dssrt-gourmand">
+                        <h3>Assorted Dessert P|late</h3>
+                        <p>Chef's choice</p>
+                        <span>18€</span>
+                    </article>
+                    <article class="dssrt-gourmand">
+                        <h3>Crème brulée</h3>
+                        <p>Revisited</p>
+                        <span>22€</span>
+                    </article>
+                    <article class="dssrt-gourmand">
+                        <h3>Tiramisu</h3>
+                        <p>With hazelnuts</p>
+                        <span>23€</span>
+                    </article>
+                </article>
+                <button class="order">Order</button>
     </main>
+    <!-- FOOTER -->
     <footer>
-        <h1>Ohmyfood</h1>
+        <h5>ohmyfood</h5>
         <div class="contacts">
             <a href="#">
                 <i class="fas fa-utensils"></i>
@@ -55,8 +119,6 @@
             </a>
         </div>
     </footer>
-
-
 </body>
 
 </html>
