--- a/the_enchanted_plate.html
+++ b/the_enchanted_plate.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ohmyfood</title>
+    <title>The Full Palette</title>
 
     <!-- Style sheets -->
     <link rel="stylesheet" href="css/main.css" type="text/css">
@@ -20,24 +20,93 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/ecb31e059d.js" crossorigin="anonymous"></script>
-</head>
 
 <body>
-    <!-- HEADER  -->
+    <!-- HEADER -->
     <header>
-        <!-- Section Navigation -->
+        <!-- Navigation -->
         <nav>
-            <article class="navigation">
+            <div class="rstnt-navigation">
+                <a href="ohmyfood.html">
+                    <i class="fas fa-arrow-left"></i>
+                </a>
                 <img src="/images/logo/ohmyfood.png" alt="logo picture">
-            </article>
+            </div>
         </nav>
-
+    </header>
     <!-- MAIN SECTION -->
     <main>
-        
+        <!--The Full Palette Menue section  -->
+        <article class="menu">
+            <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="restaurant picture">
+            <h1>The Enchanted Plate</h1>
+            <i class="far fa-heart"></i>
+        </article>
+        <!-- Starters -->
+        <article class="starters-plate">
+            <h2>ENTREES</h2>
+            <article class="strtr-plate">
+                <h3>Foie Gras Ravioli</h3>
+                <p>With truffle cream</p>
+                <span>25€</span>
+            </article>
+            <article class="strtr-plate">
+                <h3>Oscietra Caviar</h3>
+                <p>With buckwheat blinis</p>
+                <span>35€</span>
+            </article>
+            <article class="strtr-plate">
+                <h3>Lobster and Leek Foam</h3>
+                <p>Marinated with orange zest</p>
+                <span>20€</span>
+            </article>
+            <article class="strtr-plate">
+                <h3>Duck Foie Gras</h3>
+                <p>With fig jam and grilled baguette</p>
+                <span>35€</span>
+            </article>
+            <!-- Main dish -->
+            <article class="main-plate">
+                <h2>MAIN DISH</h2>
+                <article class="mn-plate">
+                    <h3>Fresh Buttered Scallops</h3>
+                    <p>With white celery puree</p>
+                    <span>40€</span>
+                </article>
+                <article class="mn-plate">
+                    <h3>Pan-Fried Lobster</h3>
+                    <p>With mashed sweet potatoes</p>
+                    <span>35€</span>
+                </article>
+                <article class="mn-plate">
+                    <h3>Braised Ox Tail</h3>
+                    <p>With wild rice and lemon zest</p>
+                    <span>44€</span>
+                </article>
+                <!-- Desserts -->
+                <article class="desserts-plate">
+                    <h2>DESSERTS</h2>
+                    <article class="dssrt-plate">
+                        <h3>Chocolate and Hazelnut Macaron</h3>
+                        <p>With caramel butter ice cream</p>
+                        <span>18€</span>
+                    </article>
+                    <article class="dssrt-plate">
+                        <h3>Baba au rhum</h3>
+                        <p>With lemon drizzle</p>
+                        <span>22€</span>
+                    </article>
+                    <article class="dssrt-plate">
+                        <h3>Lemon Meringue Pie</h3>
+                        <p>Destructured</p>
+                        <span>23€</span>
+                    </article>
+                </article>
+                <button class="order">Order</button>
     </main>
+    <!-- FOOTER -->
     <footer>
-        <h1>Ohmyfood</h1>
+        <h5>ohmyfood</h5>
         <div class="contacts">
             <a href="#">
                 <i class="fas fa-utensils"></i>
@@ -55,8 +124,6 @@
             </a>
         </div>
     </footer>
-
-
 </body>
 
 </html>
